--- a/style.css
+++ b/style.css
@@ -1,56 +1,59 @@
 * {
     margin: 0;
     padding: 0;
-}
-
-.logo h1 {
-    color: white;
-    font-size: 40px;
+    box-sizing: border-box;
 }
 
 
-.logo:hover {
-    transform: translateY(10%);
-    transition: 2s;
-}
-
-nav {
+html {
+    scroll-behavior: smooth;
+  }
+  nav .logo {
+    color: #fff;
+    margin-right: 10rem;
+  }
+  nav {
     display: flex;
-    justify-content: space-evenly;
-    padding: 5vh;
-    background-color: #5C362F;
-    background: transparent;
-    flex-wrap: wrap;
-    overflow: hidden;
-    background: #333;
-}
-
-.nav a{
-    float: left;
-    display: block;
-
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    background-color: rgb(9, 16, 148);
+    width: 100%;
+    padding: 2rem;
+  }
+  .nav-links {
+    display: flex;
+    justify-content: space-around;
+    gap: 1rem;
+    width: 30%;
+    margin-right: 10rem;
+  }
+  
+  .nav-links li {
+    list-style: none;
+  }
+  .nav-links a {
     text-decoration: none;
-    font-size: 17px;
-}
-
-.nav a:hover {
-    background-color: #ddd;
-    color: black;
+    color: #fff;
   }
-
-
-  .nav a.active {
-    background-color: #04AA6D;
-    color: white;
+  
+  /* icons */
+  .fa-solid {
+    color: #fff;
   }
-
-  .nav .icon {
+  
+  .burger {
     display: none;
+    cursor: pointer;
   }
-
+  
+  .burger div {
+    width: 25px;
+    min-height: 3px;
+    margin: 5px;
+    background-color: #fff;
+    transition: all 0.3 ease;
+  }
 
 body {
     background-image: url(./img/photo-1628394029748-3bbbc88a4334.avif);
@@ -58,772 +61,87 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    animation: fade 20s ease-in-out infinite;
-    transition: 10s;
 }
 
-@keyframes fade {
-    0% {
-        background-color: rgb(245, 253, 245);
+
+
+
+/* @MEDIA QUERY DISPLAY */
+@media screen and (max-width: 768px) {
+    nav {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      min-height: 8vh;
+      background-color: rgb(9, 16, 148);
+      width: 100%;
     }
-
-    20% {
-        background-color: rgb(253, 245, 253);
+    .text {
+      text-align: center;
+      align-content: center;
+      text-transform: normal;
+      color: #fff;
     }
-
-    40% {
-        background-color: rgb(242, 250, 242);
+  
+    .nav-links {
+      width: 100%;
+      position: absolute;
+      right: 0px;
+      height: 23rem;
+      top: 10.24vh;
+      margin: 1rem;
+      background-color: rgb(9, 16, 148);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      transform: translateX(-150%);
+      transition: transform 1s ease-in;
+      border-bottom-right-radius: 5px;
+      border-top-right-radius: 5px;
     }
-
-    60% {
-        background-color: rgb(242, 248, 248);
+  
+    .nav-links li {
+      opacity: 1;
     }
-
-    100% {
-        background-color: #ffff;
+   
+    .burger {
+      display: block;
     }
-}
-
-nav:hover {
-    background-color: #5C362F;
-}
-
-.menu {
-    display: flex;
-    gap: 1em;
-    margin-top: 1vh;
-    font-size: 16px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 40px;
-    font-style: normal;
-    flex-wrap: wrap;
-
-}
-
-.header {
-    background-image: url(../img/buka.avif);
-    background-repeat: no-repeat;
-    background-size: cover;
-    backface-visibility: visible;
-    height: 600px;
-}
-
-.menu a {
-    text-decoration: none;
-    color: white;
-    padding-top: 1vh;
-    background: transparent;
-}
-
-.menu a:hover {
-    background-color: #C68248;
-    color: rgb(34, 32, 32);
-    font-weight: 200px;
-    /* transition: 1s; */
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px 10px #EFDBC1;
-}
-
-
-
-#headding a {
-    float: right;
-    margin-top: 25vh;
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-family: 400px;
-    width: 100%;
-    text-decoration: none;
-    color: tomato;
-}
-
-#headding:hover {
-    transform: translateY(-20%);
-    transition: 5s;
-}
-
-.banner {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    gap: 2em;
-    width: 100%;
-    margin-top: 34vh;
-    line-height: 30px;
-}
-
-
-.main {
-    margin-top: 11vh;
-}
-
-.center {
-    text-align: center;
-    font-size: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: 40px;
-    text-align: center;
-    margin: 0 auto 80px;
-    position: relative;
-    line-height: 60px;
-    color: #555;
-}
-
-
-
-
-.center::after {
-    content: '';
-    background: #ff523b;
-    width: 80px;
-    height: 5px;
-    border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: 2s;
-}
-
-.under {
-    text-align: center;
-    color: #555;
-    margin: 0 auto 80px;
-    position: relative;
-    line-height: 60px;
-}
-
-.under::after {
-    content: '';
-    background: #ff523b;
-    width: 80px;
-    height: 5px;
-    border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: 2s;
-}
-
-.classr {
-    text-align: center;
-    font-size: 12px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: 80px;
-    font-style: normal;
-}
-
-.sniper {
-    display: flex;
-    justify-content: center;
-    gap: 1em;
-    flex-wrap: wrap;
-}
-
-.mano {
-    border: 2px solid rgb(255, 255, 255);
-    height: 150px;
-    border-radius: 10px;
-    background-color: rgb(229, 231, 231);
-    text-align: center;
-    padding-top: 4vh;
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 25px;
-    padding: 2rem;
-    box-shadow: 1px 1px 6px 1px rgb(241, 241, 241);
-}
-
-.mano:hover {
-    box-shadow: 3px 3px px 5px #888;
-    background: radial-gradient(rgb(243, 243, 248), rgb(235, 228, 228), rgb(245, 230, 245));
-    font-family: sans-serif;
-    font-weight: 400px;
-    color: blue;
-    line-height: 30px;
-}
-
-.margin {
-    margin-top: 5vh;
-}
-
-.thirdlayer {
-    margin-top: 5vh;
-    background-color: rgb(233, 231, 231);
-}
-
-.foodme {
-    text-align: center;
-    color: #555;
-    margin: 0 auto 80px;
-    position: relative;
-    line-height: 60px;
-    font-size: 22px;
-}
-
-.foodme::after {
-    content: '';
-    background: #ff523b;
-    width: 80px;
-    height: 5px;
-    border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: 2s;
-}
-
-.undero {
-    display: flex;
-    justify-content: center;
-    gap: 3em;
-    flex-wrap: wrap;
-}
-
-.we {
-    border: 2px solid rgb(250, 234, 234);
-    font-size: 10px;
-    font-family: 'Times New Roman', Times, serif;
-    border-radius: 10px;
-    height: 50px;
-    padding-top: 20px;
-    font-weight: 40px;
-    font-family: cursive;
-    font-variant: small-caps;
-    width: 200px;
-    text-align: center;
-}
-
-.we:hover {
-    background-color: red;
-    color: aliceblue;
-    transform: translateY(-30%);
-    transition: 2s;
-}
-
-.wi {
-    border: 2px solid rgb(250, 234, 234);
-    font-size: 10px;
-    font-family: 'Times New Roman', Times, serif;
-    border-radius: 10px;
-    height: 50px;
-    padding-top: 20px;
-    font-weight: 40px;
-    font-family: cursive;
-    font-variant: small-caps;
-    width: 200px;
-    text-align: center;
-}
-
-.wi:hover {
-    background-color: red;
-    color: aliceblue;
-    transform: translateY(-30%);
-    transition: 2s;
-}
-
-.wo {
-    border: 2px solid rgb(250, 234, 234);
-    font-size: 10px;
-    font-family: 'Times New Roman', Times, serif;
-    border-radius: 10px;
-    height: 50px;
-    padding-top: 20px;
-    font-weight: 40px;
-    font-family: cursive;
-    font-variant: small-caps;
-    width: 200px;
-    text-align: center;
-}
-
-.wo:hover {
-    background-color: red;
-    color: aliceblue;
-    transform: translateY(-30%);
-    transition: 2s;
-}
-
-.wm {
-    border: 2px solid rgb(250, 234, 234);
-    font-size: 10px;
-    font-family: 'Times New Roman', Times, serif;
-    border-radius: 10px;
-    height: 50px;
-    padding-top: 20px;
-    font-weight: 40px;
-    font-family: cursive;
-    font-variant: small-caps;
-    width: 200px;
-    text-align: center;
-}
-
-.wm:hover {
-    background-color: red;
-    color: aliceblue;
-    transform: translateY(-30%);
-    transition: 2s;
-}
-
-.wk {
-    border: 2px solid rgb(250, 234, 234);
-    font-size: 10px;
-    font-family: 'Times New Roman', Times, serif;
-    border-radius: 10px;
-    height: 50px;
-    padding-top: 20px;
-    font-weight: 40px;
-    font-family: cursive;
-    font-variant: small-caps;
-    width: 200px;
-    text-align: center;
-}
-
-.wk:hover {
-    background-color: red;
-    color: aliceblue;
-    transform: translateY(-30%);
-    transition: 2s;
-}
-
-.wl {
-    border: 2px solid rgb(250, 234, 234);
-    font-size: 10px;
-    font-family: 'Times New Roman', Times, serif;
-    border-radius: 10px;
-    height: 50px;
-    padding-top: 20px;
-    font-weight: 40px;
-    font-family: cursive;
-    font-variant: small-caps;
-    width: 200px;
-    text-align: center;
-}
-
-.wl:hover {
-    background-color: red;
-    color: aliceblue;
-    transform: translateY(-30%);
-    transition: 2s;
-}
-
-.wj {
-    border: 2px solid rgb(250, 234, 234);
-    font-size: 10px;
-    font-family: 'Times New Roman', Times, serif;
-    border-radius: 10px;
-    height: 50px;
-    padding-top: 20px;
-    font-weight: 40px;
-    font-family: cursive;
-    font-variant: small-caps;
-    width: 200px;
-    text-align: center;
-}
-
-.wj:hover {
-    background-color: red;
-    color: aliceblue;
-    transform: translateY(-30%);
-    transition: 2s;
-}
-
-button {
-    height: 60px;
-    width: 300px;
-    color: aqua;
-    outline: none;
-    border: none;
-    font-size: 20px;
-    background-color: red;
-    border-radius: 10px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 300px;
-}
-
-button:hover {
-    background-color: rgb(240, 168, 168);
-    transition: 2s;
-    color: #555;
-}
-
-.btn {
-    display: flex;
-    justify-content: center;
-    margin-top: 3vh;
-}
-
-.font {
-    display: flex;
-    justify-content: center;
-    gap: 3em;
-    padding-top: 1.2vh;
-    font-size: 14px;
-}
-
-
-.headingone {
-    text-align: center;
-    color: #555;
-    margin: 0 auto 80px;
-    position: relative;
-    line-height: 60px;
-    font-size: 22px;
-    margin-top: 3vh;
-}
-
-.headingone::after {
-    content: '';
-    background: #ff523b;
-    width: 80px;
-    height: 5px;
-    border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-/* body{
-    background-image: url(../img/buka.avif);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-} */
-
-.lopagro {
-    display: flex;
-    justify-content: center;
-    gap: 2em;
-    flex-wrap: wrap;
-    background-image: url(../img/elibet-valencia-munoz-z4_bNziWTWE-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    /* width: 600px; */
-}
-
-.lokofarn {
-    border: 2px solid rgb(224, 221, 221);
-    line-height: 40px;
-    text-align: center;
-    font-size: 16px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: rgb(231, 222, 222);
-    border-radius: 20px;
-    color: rgb(26, 24, 26);
-}
-
-.lokofarn:hover p {
-    background-image: linear-gradient(45deg, blue, purple);
-    -webkit-background-clip: text;
-    color: transparent;
-}
-
-.lokofarn:hover h1 {
-    background-image: linear-gradient(45deg, rgb(97, 15, 15), rgb(43, 3, 43));
-    -webkit-background-clip: text;
-    color: transparent;
-}
-
-.baker {
-    text-align: center;
-    color: #555;
-    margin: 0 auto 80px;
-    position: relative;
-    line-height: 60px;
-    font-size: 22px;
-    margin-top: 3vh;
-}
-
-.baker::after {
-    content: '';
-    background: #ff523b;
-    width: 80px;
-    height: 5px;
-    border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.tea {
-    text-align: center;
-    /* border: 3px solid black; */
-    background-color: transparent;
-    border: 2px solid purple;
-    box-shadow: 5px 10px 10px rgb(46, 45, 45);
-    width: 200px;
-    height: 200px;
-    border-radius: 100%;
-}
-
-.tea:hover {
-    background-color: black;
-    transform: translateY(-10%);
-    transition: 1s;
-}
-
-.tea p {
-    text-align: center;
-}
-
-.bak {
-    background: url(../img/miti-R1ql7fk3I1Y-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    height: 600px;
-
-}
-
-.bak:hover {
-    transition: 1s;
-    transform: translateY(-5%);
-}
-
-.bopo {
-    display: flex;
-    justify-content: center;
-    gap: 2em;
-    flex-wrap: wrap;
-    padding-top: 10vh;
-
-}
-
-.part {
-    display: flex;
-    justify-content: center;
-    margin-top: 4vh;
-}
-
-.space {
-    display: flex;
-    justify-content: center;
-}
-
-.fa-solid {
-    display: flex;
-    justify-content: center;
-    padding-top: 20px;
-    font-size: 50px;
-    color: white;
-}
-
-.ket {
-    padding-top: 4vh;
-    color: white;
-    font-size: 20px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
-
-.disp {
-    text-align: center;
-    color: #555;
-    margin: 0 auto 80px;
-    position: relative;
-    line-height: 60px;
-    font-size: 20px;
-    margin-top: 3vh;
-}
-
-.disp::after {
-    content: '';
-    background: #ff523b;
-    width: 80px;
-    height: 5px;
-    border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.imo {
-    background-image: url(../img/claudio-schwarz-FLLKq3yDnfI-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-
-}
-
-.mmm {
-    display: flex;
-    justify-content: center;
-    gap: 2em;
-    height: 300px;
-    flex-wrap: wrap;
-    padding-top: 10vh;
-}
-
-.im {
-    font-size: 16px;
-}
-
-.state {
-    text-align: center;
-    padding-top: 7vh;
-    font-size: 40px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    border: 2px solid rgb(247, 208, 208);
-    background-color: #BD8E1F;
-    width: 400px;
-    color: #AE1B35;
-    height: 100px;
-    border-radius: 20px;
-    margin-top: 5vh;
-}
-
-.dispol {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.boardmember {
-    text-align: center;
-    color: #555;
-    margin: 0 auto 80px;
-    position: relative;
-    line-height: 60px;
-    font-size: 20px;
-    margin-top: 3vh;
-}
-
-.boardmember::after {
-    content: '';
-    background: #ff523b;
-    width: 80px;
-    height: 5px;
-    border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.ibk {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 2em;
-    padding-top: 2vh;
-}
-
-.sty {
-    border: 2px solid black;
-    height: 300px;
-    width: 300px;
-}
-
-
-footer {
-    background-color: black;
-    border-bottom: 2px solid red;
-    width: 100%;
-
-}
-
-
-
-.poli {
-    color: white;
-    line-height: 40px;
-}
-
-#btno{
-    background-color: blueviolet;
-    width: 100px;
-    height: 40px;
-    font-size: 14px;
-    font-weight: 500px;
-    font-family: arial;
-}
-
-#inpo{
-    width: 300px;
-    padding: 2vh;
-    border-radius: 10px;
-    border: 0;
-    outline: none;
-}
-#join{
-    color: white;
-    font-size: 14px;
-    line-height: 30px;
-    font-family: arial;
-    font-style: normal;
-}
-#four{
-    color: blueviolet;
-    font-size: 16px;
-    line-height: 40px;
-}
-#our{
-    color: blueviolet;
-    font-size: 16px;
-}
-
-#res{
-    color: blueviolet;
-    font-size: 16px;
-}
-#order-list li{
-    color: white;
-    list-style: none;
-    line-height: 26px;
-    font-weight: 400px;
-    font-size: 14px;
-}
-
-#parent{
-    display: flex;
-    justify-content: center;
-    gap: 3em;
-    flex-wrap: wrap;
-}
-
-
-
-@media screen and (max-width:768px) {
-
-    .bak {
-        height: 500px;
+  
+    .nav-active {
+      transform: translateX(0%);
     }
-}
-
-@media screen and (max-width:1080px) {
-    .bak {
-        height: 900px;
+  
+  
+  @keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
     }
-
-}
-
-
-@media screen and (max-width:520px) {
-    .bak {
-        height: 1100px;
+    to {
+      opacity: 1;
+      transform: translateX(0px);
     }
-
-    .tea{
-        width: 120px;
-    }
-
-    .bopo{
-        display: grid;
-        grid-template-columns: auto auto auto;
-
-    }
-
-    .mmm{
-        display: grid;
-        grid-template-columns: auto;
-        place-content: center;
-        height: 500px;
-
-    }
-
-
-}
+  }
+  
+  .toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+  
+  .toggle .line2 {
+    opacity: 0;
+  }
+  
+  .toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+  
+  
+  
+  .nav-links form input{
+    width: 6rem;
+    height: 3rem;
+  }
+  
+  }
+  /* Meida ends */
