--- a/style.css
+++ b/style.css
@@ -90,7 +90,10 @@ body {
       align-items: center;
       min-height: 8vh;
       background-color: rgb(9, 16, 148);
+      background-position: fixed;
+      background-size: cover;
       width: 100%;
+      height: 100%;
     }
     .text {
       text-align: center;
@@ -104,7 +107,6 @@ body {
         margin-right: 4rem;
       width: 100%;
       position: absolute;
-      right: 0px;
       height: 23rem;
       top: 10.24vh;
       margin: 1rem;
@@ -114,8 +116,7 @@ body {
       align-items: center;
       transform: translateX(-150%);
       transition: transform 1s ease-in;
-      border-bottom-right-radius: 8rem;
-      border-top-right-radius: 8rem;
+      clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
       padding-bottom: 0.40rem;
     }
   
