--- a/style.css
+++ b/style.css
@@ -1,138 +1,177 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* font-family: 'Montserrat', sans-serif; */
 }
 
-
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
+}
+nav .logo {
+  color: #fff;
+  margin-right: 10rem;
+  font-size: 2rem;
+}
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
+  background-color: #1b10bb;
+  width: 100%;
+  padding: 2rem;
+}
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  gap: 1rem;
+  width: 30%;
+  margin-right: 10rem;
+}
+
+.nav a {
+  cursor: pointer;
+}
+
+ul a {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+a input {
+  width: 5rem;
+  /* height: 2rem; */
+  padding: 4px;
+}
+.nav-links li {
+  list-style: none;
+}
+.nav-links a {
+  text-decoration: none;
+  color: #fff;
+}
+
+/* icons */
+.fa-solid {
+  color: #fff;
+}
+
+.burger {
+  display: none;
+  cursor: pointer;
+}
+
+.burger div {
+  width: 25px;
+  min-height: 3px;
+  margin: 5px;
+  background-color: #fff;
+  transition: all 0.3 ease;
+}
+
+body {
+  background-image: url(./img/photo-1628394029748-3bbbc88a4334.avif);
+  background-position: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.container {
+  background-image: url(./img/photo-1593768128575-e41545e803d8.avif);
+  background-position: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 29rem;
+  transition: all;
+  animation: fade 7s ease-in-out infinite;
+  /* margin: 1rem; */
+}
+
+.row h1{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  padding-top: 8rem;
+  color: #fff;
+  text-shadow: 2px 2px 4px rgba(0,0,0.9);
+  font-family: "Open Sans", sans-serif;
+  margin-left: 2rem;
+}
+
+@keyframes fade {
+  from {
+    background-image: url(./img/photo-1600891965050-6da6bad77c3f.avif);
+    background-attachment: fixed;
   }
-  nav .logo {
-    color: #fff;
-    margin-right: 10rem;
-    font-size: 2rem;
+}
+
+#hello{
+  transition: all;
+  animation: round 1s ease-in-out infinite;
+}
+@keyframes round {
+  from{
+    color: rgb(48, 237, 48);
   }
+  to{
+    color: red;
+  }
+}
+
+/* @MEDIA QUERY DISPLAY */
+@media screen and (max-width: 768px) {
   nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    background-color: #1b10bb;
-    width: 100%;
-    padding: 2rem;
-  }
-  .nav-links {
-    display: flex;
-    justify-content: space-around;
-    gap: 1rem;
-    width: 30%;
-    margin-right: 10rem;
-  }
-  
-  .nav a{
-    cursor: pointer;
-  }
-
-  ul a{
-  display: flex;
-    justify-content: space-between;
-    gap: 1rem;
-  }
-
-  a input{
-    width: 5rem;
-    /* height: 2rem; */
-    padding: 4px;
-  }
-  .nav-links li {
-    list-style: none;
-  }
-  .nav-links a {
-    text-decoration: none;
-    color: #fff;
-  }
-  
-  /* icons */
-  .fa-solid {
-    color: #fff;
-  }
-  
-  .burger {
-    display: none;
-    cursor: pointer;
-  }
-  
-  .burger div {
-    width: 25px;
-    min-height: 3px;
-    margin: 5px;
-    background-color: #fff;
-    transition: all 0.3 ease;
-  }
-
-body {
-    background-image: url(./img/photo-1628394029748-3bbbc88a4334.avif);
+    background-color: rgb(9, 16, 148);
     background-position: fixed;
-    background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
-}
+    width: 100%;
+    height: 100%;
+  }
+  .text {
+    text-align: center;
+    align-content: center;
+    text-transform: normal;
+    color: #fff;
+  }
 
+  .nav-links {
+    box-sizing: content-box;
+    margin-right: 4rem;
+    width: 100%;
+    position: absolute;
+    height: 30rem;
+    top: 10.24vh;
+    margin: 1rem;
+    background-color: rgb(9, 16, 148);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateX(-150%);
+    transition: transform 1s ease-in;
+    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+    padding-bottom: 0.4rem;
+  }
 
+  .nav-links li {
+    opacity: 1;
+  }
 
+  .burger {
+    display: block;
+  }
 
-/* @MEDIA QUERY DISPLAY */
-@media screen and (max-width: 768px) {
-    nav {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      min-height: 8vh;
-      background-color: rgb(9, 16, 148);
-      background-position: fixed;
-      background-size: cover;
-      width: 100%;
-      height: 100%;
-    }
-    .text {
-      text-align: center;
-      align-content: center;
-      text-transform: normal;
-      color: #fff;
-    }
-  
-    .nav-links {
-        box-sizing: content-box;
-        margin-right: 4rem;
-      width: 100%;
-      position: absolute;
-      height: 23rem;
-      top: 10.24vh;
-      margin: 1rem;
-      background-color: rgb(9, 16, 148);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      transform: translateX(-150%);
-      transition: transform 1s ease-in;
-      clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
-      padding-bottom: 0.40rem;
-    }
-  
-    .nav-links li {
-      opacity: 1;
-    }
-   
-    .burger {
-      display: block;
-    }
-  
-    .nav-active {
-      transform: translateX(0%);
-    }
-  
-  
+  .nav-active {
+    transform: translateX(0%);
+  }
+
   @keyframes navLinkFade {
     from {
       opacity: 0;
@@ -143,25 +182,33 @@ body {
       transform: translateX(0px);
     }
   }
-  
+
   .toggle .line1 {
     transform: rotate(-45deg) translate(-5px, 6px);
   }
-  
+
   .toggle .line2 {
     opacity: 0;
   }
-  
+
   .toggle .line3 {
     transform: rotate(45deg) translate(-5px, -6px);
   }
-  
-  
-  
-  .nav-links form input{
+
+  .nav-links form input {
     width: 6rem;
     height: 3rem;
   }
-  
+
+  .row h1{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding-top: 2rem;
+    color: #fff;
+    text-shadow: 2px 2px 4px rgba(0,0,0.9);
+    font-family: "Open Sans", sans-serif;
+    margin-left: 2rem;
   }
-  /* Meida ends */
+}
+/* Meida ends */
