--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* font-family: 'Montserrat', sans-serif; */
+  
 }
 
 html {
@@ -89,6 +89,25 @@ body {
   transition: all;
   animation: fade 7s ease-in-out infinite;
   /* margin: 1rem; */
+}
+.container section{
+  display: flex;
+  justify-content: center;
+  padding: 2rem;
+  padding-top: 1rem;
+}
+
+section button{
+  width: 10rem;
+  height: 2.4rem;
+  outline: none;
+  border: 0;
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  background-color: rgb(230, 5, 5);
+  color: #fff;
 }
 
 .row h1{
