--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  scroll-behavior: smooth;
 }
 
 .container {
@@ -140,7 +141,60 @@ section button{
     color: red;
   }
 }
+.box{
+  margin: 0.30rem;
+}
 
+span h2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 3rem;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+}
+
+/* Boxx and rows */
+.rows{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 10px;
+  margin: 2rem;
+}
+
+.rows p{
+  color: #fff;
+  font-size: 16px;
+  margin-left: 1rem;
+  margin-left: 1rem;font-family: "Open Sans", sans-serif;
+
+}
+
+.rows .col{
+  border: 1px solid #ccc;
+  height: auto;
+}
+
+.rows .col1{
+  border: 1px solid #ccc;
+  height: auto;
+}
+.rows .col2{
+  border: 1px solid #ccc;
+  height: auto;
+}
+.rows .col3{
+  border: 1px solid #ccc;
+  height: auto;
+}
+
+.rows .fa-solid{
+  display: flex;
+  justify-content: center;
+  margin-top: 4px;
+  font-size: 2rem;
+}
 /* @MEDIA QUERY DISPLAY */
 @media screen and (max-width: 768px) {
   nav {
@@ -228,6 +282,15 @@ section button{
     text-shadow: 2px 2px 4px rgba(0,0,0.9);
     font-family: "Open Sans", sans-serif;
     margin-left: 2rem;
+  }
+
+  .rows{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin: 2rem;
   }
 }
 /* Meida ends */
