--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ span h2{
   font-size: 16px;
   margin-left: 1rem;
   margin-left: 1rem;font-family: "Open Sans", sans-serif;
+  text-shadow: 2px 2px 4px rgba(0,0,0.9);
 
 }
 
