--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
   background-size: cover;
   box-sizing: border-box;
   background-attachment: fixed;
-  scroll-behavior: smooth;
+  scroll-behavior: auto;
 }
 
 .container {
@@ -311,15 +311,5 @@ span h2{
     margin: 2rem;
   }
 
-
-body {
-  background-image: url(./img/photo-1628394029748-3bbbc88a4334.avif);
-  background-position: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-  box-sizing: border-box;
-  background-attachment: fixed;
-  scroll-behavior: smooth;
-}
 }
 /* Meida ends */
