--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ nav {
   margin-right: 10rem;
 }
 
+
 .nav a {
   cursor: pointer;
 }
@@ -247,8 +248,6 @@ span h2{
     align-items: center;
     transform: translateX(-150%);
     transition: transform 1s ease-in;
-    /* clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%); */
-    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
     padding-bottom: 0.4rem;
   }
 
@@ -323,6 +322,11 @@ span h2{
     word-break: normal;
   }
 
+  .general-map{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
 }
 /* Meida ends */
 
@@ -360,8 +364,6 @@ span h2{
     align-items: center;
     transform: translateX(-150%);
     transition: transform 1s ease-in;
-    /* clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%); */
-    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
     padding-bottom: 0.4rem;
   }
 
@@ -472,10 +474,76 @@ span h2{
         border-radius: 3px;
         font-family: "Open Sans", sans-serif;
       }
-
+    
     #rows{
       display: flex;
       justify-content: space-around;
       overflow-x: scroll;
+    }
+
+    #point p{
+      padding: 2rem;
+      position: absolute;
+      color: #fff;
+    }
+
+    .article{
+      background-image: url(./img/unnamed.png);
+      background-position: fixed;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+      height: auto;
+    }
+
+    .article #art{
+      text-align: center;
+      font-family: "Open Sans", sans-serif;
+      font-size: 30px;
+      color: #fff;
+      padding-top: 1rem;
+    }
+
+    .general-map{
+      display: flex;
+      justify-content: space-around;
+    }
+
+    .same img{
+      width: 100%;
+    }
+
+    .same{
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      margin: 2rem;
+    }
+
+    .same a{
+      text-decoration: none;
+      color: #fff;
+    }
+
+    .blog-in{
+      background-color: rgb(19,115,51);
+      font-family: "Open Sans", sans-serif;
+      font-size: 18px;
+      padding: 1rem;
+      border-radius: 1rem;
+    }
+    .blog-out{
+      background-color: rgb(25,103,210);
+      font-family: "Open Sans", sans-serif;
+      font-size: 18px;
+      padding: 1rem;
+      border-radius: 1rem;
+    }
+    .blog-off{
+      background-color: rgb(19,115,51);
+      font-family: "Open Sans", sans-serif;
+      font-size: 18px;
+      padding: 1rem;
+      border-radius: 1rem;
     }
 
