--- a/style.css
+++ b/style.css
@@ -107,8 +107,8 @@ section button{
   border: 0;
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
-  background-color: rgb(250, 249, 249);
-  color: #c91212;
+  background-color: rgb(26,115,232);
+  color: #fff;
   border-radius: 3px;
 }
 
