--- a/style.css
+++ b/style.css
@@ -148,8 +148,9 @@ section button{
 span h2{
   display: flex;
   justify-content: center;
+  text-align: center;
   align-items: center;
-  padding-top: 3rem;
+  padding-top: 2rem;
   color: #fff;
   font-family: "Open Sans", sans-serif;
 }
@@ -553,3 +554,163 @@ span h2{
       border-radius: 1rem;
     }
 
+
+    .carousel {
+      position: relative;
+      margin-bottom: 3rem;
+      margin: 1rem;
+      
+    }
+    
+    .carousel #h2 {
+      text-align: center;
+      color: #fff;
+      text-transform: capitalize;
+     font-family: "Open Sans", sans-serif;
+      padding-top: 3rem;
+      font-size: 30px;
+    }
+    .carousel-inner {
+      position: relative;
+      overflow: hidden;
+      width: 100%;
+      margin-top: 1rem;
+    }
+
+    .carousel-inner p{
+      position: absolute;
+      top: 0;
+      left: 0;
+      border-radius: 4px;
+      font-size: 4px;
+      font-family: "Open Sans", sans-serif;
+    }
+    
+    .carousel-open:checked + .carousel-item {
+      position: static;
+      opacity: 100;
+    }
+    
+    .carousel-item {
+      position: absolute;
+      opacity: 0;
+      -webkit-transition: opacity 0.6s ease-out;
+      transition: opacity 0.6s ease-out;
+    }
+    
+    .carousel-item img {
+      display: block;
+      height: auto;
+      width: 100%;
+      border-radius: 1rem;
+    }
+    
+    .carousel-control {
+      border: none;
+      outline: none;
+      border-radius: 50%;
+      color: #fff;
+      cursor: pointer;
+      display: none;
+      font-size: 40px;
+      height: 40px;
+      line-height: 35px;
+      position: absolute;
+      top: 50%;
+      -webkit-transform: translate(0, -50%);
+      cursor: pointer;
+      -ms-transform: translate(0, -50%);
+      transform: translate(0, -50%);
+      text-align: center;
+      width: 40px;
+      z-index: 10;
+    }
+    
+    .carousel-control.prev {
+      left: 2%;
+    }
+    
+    .carousel-control.next {
+      right: 2%;
+    }
+    
+    .carousel-control:hover {
+      /* background: rgba(0, 0, 0, 0.8); */
+      color: #aaaaaa;
+    }
+    
+    #carousel-1:checked ~ .control-1,
+    #carousel-2:checked ~ .control-2,
+    #carousel-3:checked ~ .control-3 {
+      display: block;
+    }
+    
+    .carousel-indicators {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      position: absolute;
+      bottom: 2%;
+      left: 0;
+      right: 0;
+      text-align: center;
+      z-index: 10;
+    }
+    
+    .carousel-indicators li {
+      display: inline-block;
+      margin: 0 5px;
+    }
+    
+    .carousel-bullet {
+      color: #fff;
+      cursor: pointer;
+      display: block;
+      font-size: 35px;
+    }
+    
+    .carousel-bullet:hover {
+      color: #aaaaaa;
+    }
+    
+    #carousel-1:checked
+      ~ .control-1
+      ~ .carousel-indicators
+      li:nth-child(1)
+      .carousel-bullet,
+    #carousel-2:checked
+      ~ .control-2
+      ~ .carousel-indicators
+      li:nth-child(2)
+      .carousel-bullet,
+    #carousel-3:checked
+      ~ .control-3
+      ~ .carousel-indicators
+      li:nth-child(3)
+      .carousel-bullet {
+      color: #428bca;
+    }
+    
+  
+    
+    .carousel-item p {
+      text-align: center;
+      background-color: #fff;
+      font-family: "Open Sans", sans-serif;
+      font-size: 16px;
+      text-transform: capitalize;
+    }
+    
+    .carousel .fa-solid {
+      color: #0707c3;
+    }
+    
+    #parag{
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      align-items: center;
+      color: #fff;
+    }
+
+   
