--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,17 @@ span h2{
     #rows{
       display: flex;
       justify-content: space-around;
-      overflow-x: scroll;
+      width: 100%;
+    height: 100%;
+    overflow: hidden;
+    }
+
+    .cols{
+      width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+    box-sizing: content-box; /* So the width will be 100% + 17px */
     }
 
     #point p{
@@ -700,28 +710,12 @@ span h2{
       color: #0707c3;
     }
     
-    #parag{
-      display: flex;
-      justify-content: center;
-      text-align: center;
-      align-items: center;
-      color: #fff;
-    }
-
-  .form-all{
-    display: flex;
-    justify-content: center;
-    background-color: #010110;
-    /* line-height: 3rem; */
-    padding: 3rem;
-    color: #fff;
-  }
-  
-  form input{
-    width: 100%;
-    padding: 1rem;
-    
-  }
- 
+   .below{
+    background-image: url(./img/gova.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: fixed;
+    background-attachment: fixed;
+   }
 
    
