--- a/style.css
+++ b/style.css
@@ -324,6 +324,32 @@ span h2{
     flex-wrap: wrap;
   }
 
+  .footer-3{
+    padding-top: 2rem;
+  }
+  form input{
+    width: 100%;
+    margin-left: 2rem;
+  }
+
+  .sec-1{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  .sec-2{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  
+  .sec-3{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  
+  }
+  
   
 }
 /* Meida ends */
@@ -725,7 +751,7 @@ span h2{
     
   }
   footer{
-    background-color: rgb(248,249,250);
+    background-color: #F8F9FA;
     font-family: "Open Sans", sans-serif;
   }
 
@@ -747,6 +773,15 @@ span h2{
   font-size: 18px;
   color: #010110;
 }
+
+.footer-2{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  line-height: 3rem;
+}
    
 .footer-2 a{
 text-decoration: none;
@@ -756,5 +791,35 @@ font-family: "Open Sans", sans-serif;
 
 .footer-2 p{
   font-size: 16px;
-  margin-left: 2rem;
 }
+
+.footer-3 #p{
+  font-family: "Open Sans", sans-serif;
+  font-size: 26px;
+  line-height: 3rem;
+}
+
+
+form input{
+border: 0;
+outline: none;
+border-bottom: 1px solid #ccc;
+width: 100%;
+}
+
+.sec-1{
+  display: flex;
+  gap: 1rem;
+}
+.sec-2{
+  display: flex;
+  gap: 1rem;
+}
+
+.sec-3{
+  display: flex;
+  gap: 1rem;
+
+}
+
+
