--- a/style.css
+++ b/style.css
@@ -600,7 +600,7 @@ span h2{
 
     .carousel {
       position: relative;
-      margin-bottom: 3rem;
+      /* margin-bottom: 3rem; */
       
     }
     
